# fizz-rs-dev

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
crates/tls_bench/: Cargo.toml  README.md
crates/tls_bench/src/: main.rs
crates/tls_bench_ablation/: Cargo.toml  README.md
crates/tls_bench_ablation/src/: main.rs
patches/: README.md  fizz-getdeps-pin-git-rev.patch  fizz-homebrew-openssl.patch
src/: async_context.rs  bridge.rs  client_tls.rs  error.rs  lib.rs  read_waker.rs  server_tls.rs
src/ffi/: bridge_decl.h  client_tls_ffi.cpp  client_tls_ffi.h  server_tls_ffi.cpp  server_tls_ffi.h
tests/: eof_repro.rs  handshake_security.rs
tests/common/: mod.rs
tests/fixtures/: fizz.crt  fizz.key
