[workspace]
members = [".", "crates/tls_bench", "crates/tls_bench_ablation"]
resolver = "2"

[package]
name = "fizz_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "fizz_rs"
path = "src/lib.rs"

[dependencies]
cxx = { version = "=1.0.176", features = ["c++14"] }
tokio = { version = "1.0", features = ["io-util", "net", "rt", "rt-multi-thread", "sync", "macros"] }
thiserror = "1.0"
bytes = "1.0"
serde = { version = "1.0.0", features = ["derive"] }

[build-dependencies]
cxx-build = "=1.0.176"

# Do not use `features = ["full"]` here: Cargo unions dev-dependency features with
# [dependencies], so `full` forces a maximal Tokio build for every `cargo test` / CI run.
[dev-dependencies]
tokio = { version = "1.0", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
