[package]
name = "tls_bench"
version = "0.1.0"
edition = "2021"
description = "Compare plain TCP vs tokio-rustls vs fizz-rs delegated TLS under the same Tokio echo workload"
publish = false

[[bin]]
name = "tls_bench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fizz_rs = { path = "../.." }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio = { version = "1.40", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
] }
# Default tokio-rustls enables aws_lc_rs; our rustls dep uses ring. Rustls 0.23
# then has two CryptoProviders and panics unless one is chosen explicitly.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
