[package]
name = "tls_bench_ablation"
version = "0.1.0"
edition = "2021"
description = "Contention-free ablation of tls_bench: one Tokio worker per client and per server, across two isolated runtimes"
publish = false

[[bin]]
name = "tls_bench_ablation"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fizz_rs = { path = "../.." }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio = { version = "1.40", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
